- APPSDK-577 - added new draggable behavior - added named css classes for types, behaviors, etc - fixed weird spacing for rounded_search when inside horizontal layout - support for parent containers - needed so that drag can work with shadow - fire custom compile events on each element to be able to hook them

--- a/components/websdk/src/common/js/appcelerator/types/input/themes/rounded_search/rounded_search.css
+++ b/components/websdk/src/common/js/appcelerator/types/input/themes/rounded_search/rounded_search.css
@@ -34,6 +34,10 @@
 {
 	top:5px;
 }
+body.firefox3 .layout.horizontal .input_rounded_search_input
+{
+	height:20px !important;
+}
 body.firefox3 .input_rounded_search_left
 {
 	height:20px !important;
